# filtile

./: .gitignore  Cargo.toml  README.md  install.sh
doc/: filtile.1.scd
src/: config.rs  lib.rs  main.rs  parse.rs
