[package]
authors = ["Phil Kulak"]
categories = ["command-line-utilities"]
description = "A layout manager for the River window manager."
keywords = ["river", "wayland"]
license = "GPL-3.0"
name = "filtile"
readme = "./README.md"
repository = "https://github.com/pkulak/filtile"
homepage = "https://github.com/pkulak/filtile"
version = "1.2.1"
edition = "2024"

[[bin]]
name = "filtile"
path = "src/main.rs"

[dependencies]
river-layout-toolkit = "0.1.7"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 2

